feat(user): add new user

--- a/core/assets/styles/components/popup.scss
+++ b/core/assets/styles/components/popup.scss
@@ -39,11 +39,6 @@
   content: "";
 }
 
-// user popup
-[data-user-popup] {
-  flex-direction: column;
-}
-
 // popup content
 [data-popup-inner] {
   display: flex;
@@ -67,7 +62,8 @@ html[class*="-is-open"] {
 
 html:not(.component-panel-is-open) [data-pb-component-popup][data-popup],
 html:not(.components-is-open) [data-pb-components-popup][data-popup],
-html:not(.user-popup-is-open) [data-user-wrapper] [data-popup],
+html:not(.user-register-popup-is-open) [data-user-wrapper] [data-user-register-popup][data-popup],
+html:not(.user-popup-is-open) [data-user-wrapper] [data-user-popup][data-popup],
 html:not(.media-popup-is-open) [data-media-wrapper] [data-popup] {
   opacity: 0;
   visibility: hidden
