feat(user): add new user

--- a/core/views/custom-type/user/index.ejs
+++ b/core/views/custom-type/user/index.ejs
@@ -16,7 +16,7 @@ const modifyDate = (publishTime) => {
 
 <% if (data.length === 0) { %>
     <h2>No content</h2>
-<% }  %>
+<% } %>
 <div class="users-list" data-custom-table data-user-wrapper>
     <div class="users-list__inner">
         <div class="users-list__heading" data-column-wrapper="heading">
@@ -204,7 +204,7 @@ const modifyDate = (publishTime) => {
 
                 <!-- Submit -->
                 <div>
-                    <button class="btn_primary" type="submit">Sign Up</button>
+                    <button class="btn_primary" type="submit" data-add-new-user-btn>Add</button>
                 </div>
 
             </form>
