feat(register): add file ejs for forget password

--- a/views/register/type/forget-password.ejs
+++ b/views/register/type/forget-password.ejs
@@ -1,19 +1,13 @@
 <form method="post" action="?type=<%= type; %>&method=post">
 
-    <!-- password -->
+    <!-- email -->
     <div>
-        <label for="password">Password:</label>
-        <input id="password" type="password" name="password" placeholder="Password">
-    </div>
-
-    <!-- Confirm password -->
-    <div>
-        <label for="confirm-password">Confirm:</label>
-        <input id="confirm-password" type="password" name="confirmPassword" placeholder="Confirm">
+        <label for="email">Email:</label>
+        <input id="email" type="email" name="email" placeholder="Email">
     </div>
 
     <!-- Submit -->
     <div>
-        <button type="submit">Change Password</button>
+        <button type="submit">Send</button>
     </div>
 </form>
