style(base): change base style

--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -50,7 +50,7 @@ if(isEditPost){
                             </div>
 
                             <div>
-                                <a href="<%= viewURL %>" target="_blank" class="btn_primary">View page</a>
+                                <a href="<%= viewURL ;%>" target="_blank" class="btn_primary txt_14px">View page</a>
                             </div>
                         </div>
                     <% } %>
