--- a/core/assets/styles/base/base.scss
+++ b/core/assets/styles/base/base.scss
@@ -75,8 +75,12 @@ button:focus-visible {
   --btn-color-hover: var(--color-white);
 
   padding: .5rem .8rem;
-  min-height: 3rem;
+  height: 3rem;
   min-width: 6rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   border-radius: 0;
   border: none;
