--- a/core/assets/styles/base/form.scss
+++ b/core/assets/styles/base/form.scss
@@ -1,6 +1,6 @@
 // input
 input {
-  min-height: 3rem;
+  height: 3rem;
   padding: .6rem;
   border: 1px solid var(--color-secondary);
   font-size: 1.6rem;
