fix(page-builder): remove redundant class

--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -84,8 +84,7 @@ if(isEditPost){
                                             data-component="<%= c.name; %>"
                                             data-action="add"
                                             data-toggle="components <%= c.name === 'row' ? '' : 'component-panel' %>"
-                                            type="button"
-                                            class="btn_primary">
+                                            type="button">
                                         <div data-component-title><%= c.title; %></div>
                                         <div data-component-description><%= c.description; %></div>
                                     </button>
