refactor(register): add required input

--- a/views/register/type/forget-password.ejs
+++ b/views/register/type/forget-password.ejs
@@ -3,7 +3,7 @@
     <!-- email -->
     <div>
         <label for="email">Email:</label>
-        <input id="email" type="email" name="email" placeholder="Email">
+        <input id="email" type="email" name="email" placeholder="Email" required>
     </div>
 
     <!-- Submit -->
