style(base): change to min-height

--- a/core/assets/styles/base/form.scss
+++ b/core/assets/styles/base/form.scss
@@ -1,6 +1,6 @@
 // input
 input {
-  height: 3rem;
+  min-height: 3rem;
   padding: .6rem;
   border: 1px solid var(--color-secondary);
   font-size: 1.6rem;
@@ -50,10 +50,11 @@ input[type="file"] {
 }
 
 // form column
-[data-form-column]{
+[data-form-column] {
   display: flex;
   gap: 5px;
 }
+
 // form group
 [data-form-group] {
 
