--- a/core/assets/styles/base/base.scss
+++ b/core/assets/styles/base/base.scss
@@ -75,7 +75,7 @@ button:focus-visible {
   --btn-color-hover: var(--color-white);
 
   padding: .5rem .8rem;
-  height: 3rem;
+  min-height: 3rem;
   min-width: 6rem;
 
   display: flex;
