--- a/core/views/custom-type/posts/detail.ejs
+++ b/core/views/custom-type/posts/detail.ejs
@@ -104,7 +104,8 @@ if(isEditPost){
                                 <div data-pb-component-options></div>
 
                                 <!-- button group -->
-                                <div data-pb-component-button-group style="margin-top:auto;">
+                                <div data-pb-component-button-group class="fl-center-v"
+                                     style="margin-top:auto; padding-top:2rem; gap:.4rem">
                                     <button type="button" data-toggle="component-panel" class="btn_primary"
                                             data-pb-component-popup-save>
                                         Save
