--- a/core/assets/styles/components/category.scss
+++ b/core/assets/styles/components/category.scss
@@ -5,9 +5,9 @@
   position: fixed;
   top: var(--header-height);
   left: 0;
+  bottom: 0;
   width: var(--category-width);
-  height: calc(100vh - var(--header-height));
-  z-index: 10;
+  z-index: 1z0;
 
   // inner
   &-inner {
