--- a/core/assets/styles/utils/variables.scss
+++ b/core/assets/styles/utils/variables.scss
@@ -13,6 +13,8 @@
 
   --placeholder-color: #adb5bd;
 
+  --primary-font: "Be Vietnam Pro", sans-serif;
+
   /* Header */
   --header-height: 46px;
 
