--- a/core/assets/styles/base/base.scss
+++ b/core/assets/styles/base/base.scss
@@ -19,7 +19,7 @@ body {
   background-color: var(--bg-color);
   min-height: 100vh;
 
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--primary-font);
   font-weight: 400;
   line-height: 1.5;
   font-size: 1.6rem;
@@ -83,7 +83,7 @@ button:focus-visible {
   background: var(--btn-bg-color);
 
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600;
   color: var(--btn-color);
 
   // hover
