chore: remove gg fonts

--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -4,13 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= title %> - <%= projectName %></title>
-
-    <!--  For demo only  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
-          rel="stylesheet">
+    <title><%= title; %> - <%= projectName; %></title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/themes/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/themes/favicon-32x32.png">
@@ -23,15 +17,20 @@
 </head>
 <body class="register">
 
-<div class="register-form fl-center h-screen">
+<div class="register-form fl-center h-screen txt_color_white">
     <div class="register-form__inner">
-        <h1><%= title ;%></h1>
 
-        <%- content; %>
+        <div class="register-form__heading boil-content">
+            <h1 class="ta-center heading-2"><%= title; %></h1>
+        </div>
+
+        <div class="register-form__content">
+            <%- content; %>
+        </div>
 
         <!-- render message-->
         <% if(message) { %>
-            <h1><%= message ;%></h1>
+            <h1><%= message; %></h1>
         <% } %>
     </div>
 </div>
