--- a/core/assets/styles/base/typo.scss
+++ b/core/assets/styles/base/typo.scss
@@ -82,47 +82,49 @@ h6 {
     margin-bottom: 1.8rem;
   }
 
+  // bottom spacing
   & :last-child {
     margin-bottom: 0;
   }
-}
 
+  // list
 
-/* Default unordered list for text block */
-ul {
-  list-style: none;
-  margin: 0;
-}
+  /* Default unordered list for text block */
+  ul {
+    list-style: none;
+    margin: 0;
+  }
 
-ul ul {
-  padding-top: 1.5rem;
-}
+  ul ul {
+    padding-top: 1.5rem;
+  }
 
-ul:not(:last-child) {
-  margin-bottom: 30px;
-}
+  ul:not(:last-child) {
+    margin-bottom: 30px;
+  }
 
-ul > li {
-  padding: 0 0 0 2rem;
-  position: relative;
-}
+  ul > li {
+    padding: 0 0 0 2rem;
+    position: relative;
+  }
 
-ul > li:not(:last-child) {
-  margin-bottom: 1rem;
-}
+  ul > li:not(:last-child) {
+    margin-bottom: 1rem;
+  }
 
-ul > li:before {
-  content: "";
-  position: absolute;
-  top: .5em;
-  left: 0;
-  width: 4px;
-  height: 4px;
-  border-radius: 50px;
-  background: #000;
-  border: 1px solid #000;
-}
+  ul > li:before {
+    content: "";
+    position: absolute;
+    top: .5em;
+    left: 0;
+    width: 4px;
+    height: 4px;
+    border-radius: 50px;
+    background: #000;
+    border: 1px solid #000;
+  }
 
-ul ul > li:before {
-  background: #fff;
+  ul ul > li:before {
+    background: #fff;
+  }
 }
