--- a/views/admin/partials/category.ejs
+++ b/views/admin/partials/category.ejs
@@ -9,7 +9,7 @@ const accountType = categories.find(c => c.type === 'account');
 
 <div class="category__panel ps-fixed" data-toggle="sidebar">
     <div class="category__panel-inner overflow-auto h100 d-flex fd-column jc-space-between">
-        <ul class="category__menu category__menu--top">
+        <ul class="category__menu category__menu--top list-style-none">
             <% categories.forEach(category => {
                 if(category.notShowInCategory) return; %>
 
@@ -33,7 +33,7 @@ const accountType = categories.find(c => c.type === 'account');
         </ul>
 
         <!-- account menu -->
-        <ul class="category__menu category__menu--bottom" style="padding: 3rem 0;">
+        <ul class="category__menu category__menu--bottom list-style-none" style="padding: 3rem 0;">
             <li class="category__menu-item <%= isActiveItem(accountType); %>">
                 <a href="<%= accountType.url; %>">Account</a>
             </li>
